--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+addons:
+  postgresql: '9.5'
 language: ruby
 rvm:
 - 2.3.1
@@ -7,5 +9,4 @@ script:
 cache: bundler
 services:
   - postgresql
-addons:
-  postgresql: '9.5'
+sudo: required
