--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: localhost
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
+  port: 5432
 
 development:
   <<: *default
